--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ form{
     font-size: 22px;
     font-weight: bold; 
     cursor: pointer; 
-    background: #00ccff;
+    background: #f0ad4e;
     border: 1px solid gray;
 
 }
